# newtownian-fractal

./: .gitignore  CMakeLists.txt  flake.nix  make_gif.sh  readme.md  response.md
include/: tasksys.cpp
src/: fractal.cpp  fractal.h  fractal.ispc  main.cpp
